[package]
name = "musicxml-rs"
version = "0.1.0"
authors = ["Eoan Ermine <patriotrossii2019@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
quick-xml = {version = "0.17", features = ["serialize"]}

validator = {version =  "0.11", features = ["derive"]}
lazy_static = "1"
regex = "1"